--- a/_posts/2023-11-16-Java-DB.md
+++ b/_posts/2023-11-16-Java-DB.md
@@ -1,5 +1,5 @@
 ---
-title: [Java] DB 연동
+title: "[Java] DB 연동"
 date: 2023-11-16 00:00:00 +0900
 categories: [Programming-Language, Java]
 tags: [java]
