--- a/_posts/2023-11-17-JPA-Proxy.md
+++ b/_posts/2023-11-17-JPA-Proxy.md
@@ -1,7 +1,7 @@
 ---
 title: "[JPA] 프록시(Proxy)"
 date: 2023-11-16 00:00:00 +0900
-categories: [Database, JPA]
+categories: [Backend, JPA]
 tags: [jpa, proxy]
 render_with_liquid: false
 future: true
