[2024-10-29] gitblog: cloud - sg

--- a/_posts/2024-10-21-Cloud-VPC.md
+++ b/_posts/2024-10-21-Cloud-VPC.md
@@ -72,7 +72,7 @@ render_with_liquid: false
 - 라우팅 테이블에 인터넷게이트에 대한 경로가 있어야 서브넷의 서버들은 외부 통신 허용
 - 인터넷 게이트웨이 없이는 VPC 내의 모든 인스턴스가 외부 인터넷 통신을 할 수 없음
     
-    [https://lh7-us.googleusercontent.com/oC5w6hdEhQhRGEc5JGpeNfISO37xgtVkXYTza9YxnHok-6p1h6BrXR9QEzwAAl-bOIhI_i4ixsK-UbqfvTNdzaViBKU6ecKko4-189_P-aLcNP2ZmhaC_ftDdVjHs72O21mPnLJ8-DMzt5Zr6aJplA](https://lh7-us.googleusercontent.com/oC5w6hdEhQhRGEc5JGpeNfISO37xgtVkXYTza9YxnHok-6p1h6BrXR9QEzwAAl-bOIhI_i4ixsK-UbqfvTNdzaViBKU6ecKko4-189_P-aLcNP2ZmhaC_ftDdVjHs72O21mPnLJ8-DMzt5Zr6aJplA)
+    ![image.png](/assets/img/Cloud/vpc/add1.png)
     
 
 ### N**AT 게이트웨이**
@@ -87,8 +87,8 @@ render_with_liquid: false
 - 프라이빗 서브넷의 인스턴스들은 NAT 게이트웨이에 연결되어 자신들의 프라이빗 IP 주소를 NAT  게이트웨이의 퍼블릭 IP 주소로 바꿔서 외부 인터넷과 연결
     - 사설 IP 주소를 가진 웹서버가 인터넷 통신을 수행하는 과정
         
-        [https://lh7-us.googleusercontent.com/qIp7weKvBGfGeLx9mE31gtJ_CiNDN4acZGxQ3zx7rfJsz26wBabltNZCNcMErDnF0Sly9xQPtti8WTtLKz28ApuehmiR0-DpDddIDHiPKSMEeQlx7V9Pfqn3l2ikIDztKpqn1vzjiUlzr2tGcro8bw](https://lh7-us.googleusercontent.com/qIp7weKvBGfGeLx9mE31gtJ_CiNDN4acZGxQ3zx7rfJsz26wBabltNZCNcMErDnF0Sly9xQPtti8WTtLKz28ApuehmiR0-DpDddIDHiPKSMEeQlx7V9Pfqn3l2ikIDztKpqn1vzjiUlzr2tGcro8bw)
-        
+        ![image.png](/assets/img/Cloud/vpc/add2.png)
+
         웹서버는 프라이빗 서브넷의 10.0.20.40인 사설 IP주소를 가지고 있어 외부 인터넷의 다른 디바이스와 연결할 수 없는 상태
         
         사설 IP주소를 가진 웹서버가 NAT 게이트웨이를 통과해 공인 IP  주소로 변환된 후 인터넷게이트웨이를 통해 외부 인터넷 디바이스와 연결
