--- a/_posts/2024-11-11-Cloud-RDS.md
+++ b/_posts/2024-11-11-Cloud-RDS.md
@@ -1,8 +1,8 @@
 ---
-title: "[Cloud] 로드밸런서(Load Balancer의 이해"
+title: "[Cloud] RDS(Relational Database Service)의 이해"
 date: 2024-11-11 00:00:00 +0900
 categories: [클라우드 인프라 구축 프로젝트]
-tags: [cloud, lb, loadbalancer, alb, nlb]
+tags: [cloud, rds, rdb]
 render_with_liquid: false
 ---
 
