update CICD categories

--- a/_posts/2026-02-24-CICD-S2I.md
+++ b/_posts/2026-02-24-CICD-S2I.md
@@ -1,7 +1,7 @@
 ---
 title: "[CI/CD] S2I(Source to Image) 완전 정리: Tekton 파이프라인 컴파일 단계"
 date: 2026-02-24 00:00:00 +0900
-categories: [CICD]
+categories: [Infra, CICD]
 tags: [s2i, source-to-image, tekton, kubernetes, openshift, maven, pipeline, assemble, cicd]
 render_with_liquid: false
 ---
